--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-google-login": "^5.0.5",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-toastify": "^5.4.0"
+    "react-toastify": "^5.4.0",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
