--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.9.0",
     "react-google-login": "^5.0.5",
     "react-redux": "^7.1.1",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-toastify": "^5.4.0",
