--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "jwt-decode": "^2.2.0",
+    "node-sass": "^4.13.0",
     "query-string": "^6.8.3",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
@@ -18,7 +19,8 @@
     "react-scripts": "3.1.1",
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
