--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^15.0.0",
+    "@ckeditor/ckeditor5-react": "^1.1.3",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "draft-js": "^0.11.2",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.0",
     "query-string": "^6.8.3",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-google-login": "^5.0.5",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
