--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "draft-js": "^0.11.2",
+    "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.8.4",
+    "html-to-draftjs": "^1.4.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
